--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -27,6 +27,7 @@
         <attr name="selectValueDrawable" format="reference"/>
         <attr name="selectValueTextSize" format="dimension"/>
         <attr name="selectValueTextColor" format="color"/>
+        <attr name="valuePointColor" format="color"/>
         <attr name="paddingLeftAndRight" format="dimension"/>
         <attr name="paddingTopAndBottom" format="dimension"/>
 
