--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <declare-styleable name="ChartBillLayout">
+    <declare-styleable name="WheelChartLayout">
         <attr name="xLabelGravity" format="enum">
             <enum name="top" value="1"/>
             <enum name="bottom" value="2"/>
