--- a/app/src/main/res/layout/activity_nest_scroll.xml
+++ b/app/src/main/res/layout/activity_nest_scroll.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <com.sign.signchart.WheelChartLayout
+            <com.sign.wheelchart.WheelChartLayout
                 android:id='@+id/cbl_bill'
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
